refactor: generate api ready for auth  verify code
